# chargepal_camera_kit

./: .gitignore  .mypy.ini  README.md  mkdocs.yml  pyproject.toml
camera_kit/: __init__.py  core.py
camera_kit/calibration/: camera_calibration.py
camera_kit/camera/: __init__.py  camera_base.py  camera_build_in.py  camera_factory.py  camera_realsense.py
camera_kit/detector/: detector_base.py
camera_kit/utilities/: converter.py
camera_kit/view/: display.py  drawing.py  user.py  user_event.py  user_signals.py
demos/: calibrate_camera.py  run_camera.py
docs/: explanation.md  index.md  reference.md  tutorials.md
